# smart-finance-tracker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Project-Development process description.docx  README.md  docker-compose.yml  skills-lock.json
.cursor/agents/: fastapi-backend.md  react-frontend.md
.cursor/commands/: apply-best-practices.md  wright-unit-tests.md
.cursor/rules/: test-before-done.mdc
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  constants.py  database.py  e2e_finance.db-shm  e2e_finance.db-wal  main.py  models.py  pyproject.toml  repository.py  requirements-dev.txt  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_goals_and_indexes.py
backend/tests/: conftest.py  test_database.py  test_transactions.py
docs/: ADVANCED_WOW_FEATURES.md  API_POLISH_AND_STATES.md  ENGINEERING_CREDIBILITY.md  FIVE_QUICK_WINS.md  PLAN.md
frontend/: index.html  jsconfig.json  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: features.spec.js  helpers.js  transactions.spec.js
frontend/src/: App.jsx  api.js  categoryColors.js  categoryColors.test.js  datePresets.js  datePresets.test.js  index.css  main.jsx  validation.js  validation.test.js
frontend/src/components/: BalanceSummary.jsx  BudgetPanel.jsx  CategoryChip.jsx  ChartsPanel.jsx  ConfirmDialog.jsx  DashboardCards.jsx  ErrorState.jsx  FilterBar.jsx  GoalPanel.jsx  RecurringPanel.jsx  Skeleton.jsx  ThemeToggle.jsx  Toast.jsx  TransactionForm.jsx  TransactionList.jsx
