[project]
name = "smart-finance-tracker-backend"
version = "0.2.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
